Starting to add Marionette

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 <script type="text/x-handlebars-template" id="one-case-tpl">
     <tr class="data-row"  id="{{idPk}}">
-        <td class="acc-num"> {{accNum}}</td>
-        <td class="format-acc-date"> {{formatAccDate}}</td>
-        <td class="list-ihc"> {{listIhc}}</td>
-        <td class="list-histochem"> {{listHisto}}</td>
-        <td class="list-ancil"> {{listAncil}}</td>
+        <td class="acc-num">{{accNum}}</td>
+        <td class="format-acc-date">{{formatAccDate}}</td>
+        <td class="list-ihc">{{listIhc}}</td>
+        <td class="list-histochem">{{listHisto}}</td>
+        <td class="list-ancil">{{listAncil}}</td>
         <td class="button-cell">
             <button class="btn btn-default" class="edit-btn">
                 <img src="images/icons/tools-2_64px.png" class="myglyph-tools" alt="Edit">
@@ -73,6 +73,7 @@
 <script src="scripts/models.js"></script>
 <script src="scripts/collections.js"></script>
 <script src="scripts/views.js"></script>
+<script src="scripts/marionette.js"></script>
 <script src="scripts/app.js"></script>
 
 </body>
