--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     </tr>
 </script>
 
+<script type="text/x-handlebars-template" id="popup-tpl">
+    <td><input type="checkbox"></td>
+    <td>{{ stain }} ({{ block }})</td>
+    <td>{{ orderDate }}</td>
+</script>
+
 
 
 <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -73,7 +79,6 @@
 <script src="scripts/models.js"></script>
 <script src="scripts/collections.js"></script>
 <script src="scripts/views.js"></script>
-<script src="scripts/marionette.js"></script>
 <script src="scripts/app.js"></script>
 
 </body>
