--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" type="text/css"-->
+          <!--href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
+    <link rel="stylesheet" type="text/css" href="../libraries/bootstrap-3.3.4-dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="styles/case-tracker.css">
     <style>
 
@@ -45,9 +46,8 @@
 </div>
 
 <script type="text/x-handlebars-template" id="one-case-tpl">
-    <tr class="data-row"  id="{{idPk}}">
         <td class="acc-num">{{accNum}}</td>
-        <td class="format-acc-date">{{formatAccDate}}</td>
+        <td class="format-acc-date">{{accDate}}</td>
         <td class="list-ihc">{{listIhc}}</td>
         <td class="list-histochem">{{listHisto}}</td>
         <td class="list-ancil">{{listAncil}}</td>
@@ -56,7 +56,6 @@
                 <img src="images/icons/tools-2_64px.png" class="myglyph-tools" alt="Edit">
             </button>
         </td>
-    </tr>
 </script>
 
 <script type="text/x-handlebars-template" id="popup-tpl">
@@ -65,13 +64,22 @@
     <td>{{ orderDate }}</td>
 </script>
 
+<script src="../libraries/jquery-2.1.4.js"></script>
+<script src="../libraries/bootstrap-3.3.4-dist/js/bootstrap.js"></script>
+<script src="../libraries/handlebars-v3.0.3.js"></script>
+<script src="../libraries/underscore.js"></script>
+<script src="../libraries/backbone.js"></script>
+<script src="../libraries/backbone.marionette.js"></script>
 
 
-<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.2/handlebars.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.4.1/backbone.marionette.js"></script>
+
+<!--<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.2/handlebars.min.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.4.1/backbone.marionette.js"></script>-->
+
+
 <script src="scripts/testdata.js"></script>
 
 <script src="scripts/defines.js"></script>
