Rendering of Acc Num and Acc Date on UI is functional.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <script type="text/x-handlebars-template" id="one-case-tpl">
         <td class="acc-num">{{accNum}}</td>
-        <td class="format-acc-date">{{accDate}}</td>
+        <td class="format-acc-date">{{formattedAccDate}}</td>
         <td class="list-ihc">{{listIhc}}</td>
         <td class="list-histochem">{{listHisto}}</td>
         <td class="list-ancil">{{listAncil}}</td>
