Successfully renders the pending IHC into the table

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 <script type="text/x-handlebars-template" id="one-case-tpl">
         <td class="acc-num">{{accNum}}</td>
         <td class="format-acc-date">{{formattedAccDate}}</td>
-        <td class="list-ihc">{{listIhc}}</td>
+        <td class="list-ihc">{{{listIhc}}}</td> <!--The 3x{ is needed to avoid
+        escaping the HTML that will be put here.-->
         <td class="list-histochem">{{listHisto}}</td>
-        <td class="list-ancil">{{listAncil}}</td>
+        <td class="list-ancil">{{{listMolec}}}</td>
         <td class="button-cell">
             <button class="btn btn-default" class="edit-btn">
                 <img src="images/icons/tools-2_64px.png" class="myglyph-tools" alt="Edit">
