All three ancillary studies are now rendering

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <header id="title">
-        <h1 class="text-center">Handel Bars Template Test</h1>
+        <h1 class="text-center">case-tracker App</h1>
     </header>
 
     <table class="table table-hover" id="quotes-table">
